# places

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2026_03_14_1713-d2c874feecf5_initial_places_and_place_members.py
src/: main.py
src/core/: config.py  dto.py  exceptions.py  types.py
src/dependencies/: config.py  db.py  kafka.py  places.py
src/handlers/: places.py
src/infra/db/: __init__.py  helper.py  uow.py
src/infra/db/models/: __init__.py  base.py  place.py  place_member.py
src/infra/db/repositories/: __init__.py  base.py  place.py  place_member.py
src/services/: places.py
